change class path

--- a/components/src/main/AndroidManifest.xml
+++ b/components/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.java.binder" />
+    package="com.example.java.components" />
