--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,8 @@
-include ':connection'
-rootProject.name='example-android-java-boilerplate'
+include ':utils'
 include ':app'
 include ':binder'
 include ':binder-annotations'
 include ':binder-compiler'
 include ':components'
+include ':connection'
+rootProject.name='example-android-java-boilerplate'
